upando ate a aula 05 modulo 04

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Barbearia Alura</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <style></style>
 </head>
 
@@ -51,15 +51,36 @@
             </p>
         </section>
 
+        <section class="mapa">
+            <h3 class="tituloPrincipal">Nosso Estabelecimento</h3>
+            <p>Nosso estabelecimento está localizado no coração da cidade</p>
+            <div class="mapaConteudo" >
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15935.703798259698!2d-60.0263757!3d-3.1142937!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5e0c4cd0cbda9184!2zU2HDumRlICYgUkg!5e0!3m2!1spt-BR!2sbr!4v1664286674022!5m2!1spt-BR!2sbr"
+                    width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+        </section>
+
         <section class="beneficios">
             <h3 class="tituloPrincipal">Benefícios</h3>
-            <ul>
-                <li class="items">&bull; Atendimento ao Cliente</li>
-                <li class="items">&bull; Espaço diferenciado</li>
-                <li class="items">&bull; Localização</li>
-                <li class="items">&bull; Profissionais Qualificado</li>
-            </ul>
-            <img src="beneficios.jpg" alt="beneficios" class="imagemBeneficios" />
+            <div class="conteudoBeneficios" >
+                <ul class="listaBeneficios" >
+                    <li class="items"><strong>Atendimento ao Cliente</strong></li>
+                    <li class="items">diferenciado</li>
+                    <li class="items">Localização</li>
+                    <li class="items">Profissionais Qualificado</li>
+                    <li class="items">Pontualidade</li>
+                    <li class="items">Limpeza</li>
+                </ul><img src="beneficios.jpg" alt="beneficios" class="imagemBeneficios" />
+            </div>
+            <div class="video" >
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+            </div>
         </section>
     </main>
 
