--- a/contato.html
+++ b/contato.html
@@ -24,7 +24,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="mainContato">
         <form>
             <label for="nome">Nome</label>
             <input type="text" id="nome" class="input-padrao" placeholder="Nome Sobrenome"/>
